[gd_scene load_steps=6 format=3 uid="uid://dl5jls6tc7a2t"]

[ext_resource type="PackedScene" uid="uid://d2i15cdabp3yy" path="res://ui/fried_window/fried_window.tscn" id="1_a5gcj"]
[ext_resource type="Script" path="res://ui/fried_window/delete_window/delete_window.gd" id="2_61652"]
[ext_resource type="PackedScene" uid="uid://bdnh40tn0t5yx" path="res://ui/fried_convex_panel/fried_convex_panel.tscn" id="3_t052o"]
[ext_resource type="PackedScene" uid="uid://cq6rcy2ktpx36" path="res://ui/fried_button/fried_button_red.tscn" id="4_8618b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05vpd"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[node name="DeleteWindow" instance=ExtResource("1_a5gcj")]
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource("2_61652")
is_invisible_on_close = true

[node name="TitleLabel" parent="M/VBoxContainer/TitleBar/H" index="0"]
text = "Delete Type"

[node name="CloseButton" parent="M/VBoxContainer/TitleBar/H" index="1"]
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../../Body/V/M/FriedConvexPanel/H/CancelButton")
focus_next = NodePath("../../../Body/V/M/FriedConvexPanel/H/CancelButton")
focus_previous = NodePath(".")

[node name="V" type="VBoxContainer" parent="M/VBoxContainer/Body" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="M2" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Label" type="Label" parent="M/VBoxContainer/Body/V/M2" index="0"]
layout_mode = 2
text = "Delete selected items?"

[node name="C" type="PanelContainer" parent="M/VBoxContainer/Body/V" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_05vpd")

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V/C" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="M/VBoxContainer/Body/V/C/M" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "Items"
fit_content = true

[node name="M" type="MarginContainer" parent="M/VBoxContainer/Body/V" index="2"]
layout_mode = 2

[node name="FriedConvexPanel" parent="M/VBoxContainer/Body/V/M" index="0" instance=ExtResource("3_t052o")]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel" index="0"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DeleteButton" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel/H" index="0" instance=ExtResource("4_8618b")]
unique_name_in_owner = true
layout_mode = 2
text = "Delete"
icon = null
alignment = 1

[node name="CancelButton" type="Button" parent="M/VBoxContainer/Body/V/M/FriedConvexPanel/H" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../../../../../../TitleBar/H/CloseButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_mode = 0
text = "Cancel"
